--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,27 +1,28 @@
 {
-  "store.home": { 
+  "store.home": {
     "blocks": [
-      "rich-text"
+      "rich-text",
+      "info-card#button-right",
+      "info-card#button-left"
     ]
   },
   "rich-text": {
-    "props":{
+    "props": {
       "text": "**Hello, World!**",
       "textPosition": "RIGHT"
-
     }
   },
   "info-card#button-right": {
     "props": {
-    "isFullModeStyle": false,
-    "textPosition": "right",
-    "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
-    "headline": "Vintage Pink",
-    "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
-    "callToActionMode": "button",
-    "callToActionText": "Explore",
-    "callToActionUrl": "/sale/d",
-    "textAlignment": "center"
+      "isFullModeStyle": false,
+      "textPosition": "right",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
+      "headline": "Vintage Pink",
+      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
+      "callToActionMode": "button",
+      "callToActionText": "Explore",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center"
     }
   },
   "info-card#button-left": {
@@ -31,8 +32,8 @@
     "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
     "headline": "Shining chrome",
     "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-    "callToActionLink":"Go to Collection",
-    "callToActionText": "Explore",
+    "callToActionMode": "link",
+    "callToActionText": "Go to Collection",
     "callToActionUrl": "/sale/d",
     "textAlignment": "center"
     }
