ajustando página de produtos

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -28,21 +28,14 @@
         "product-name",
         "product-identifier.product",
         "product-price",
-        "flex-layout.row#qty-sku",
-        "buy-button"
+        "flex-layout.row#qty-sku"
       ]
     },
-    "flex-layout.row#qty-sku": {
-      "children": [
-        "sku-selector",
-        "product-quantity",
-        "shipping-simulator"
-      ]
-    },
-    "product-price":{
-      "props": {
-        "showSavings": true,
-        "showListPrice": true
-      }
-    }
+  "flex-layout.row#qty-sku": {
+    "children": [
+      "sku-selector",
+      "product-quantity",
+      "shipping-simulator"
+    ]
+  }
 }
