--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -34,7 +34,8 @@
   "flex-layout.row#qty-sku": {
     "children": [
       "sku-selector",
-      "product-quantity"
+      "product-quantity",
+      "shipping-simulator"
     ]
   }
 }
