--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -28,14 +28,14 @@
         "product-name",
         "product-identifier.product",
         "product-price",
-        "flex-layout.row#qty-sku"
+        "flex-layout.row#qty-sku",
+        "shipping-simulator"
       ]
     },
   "flex-layout.row#qty-sku": {
     "children": [
       "sku-selector",
-      "product-quantity",
-      "shipping-simulator"
+      "product-quantity"
     ]
   }
 }
