--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -2,7 +2,8 @@
   "store.product": {
       "children": [
         "breadcrumb",
-        "flex-layout.row#main"
+        "flex-layout.row#main",
+        "shelf.relatedProducts"
       ]
     },
     "flex-layout.row#main": { 
@@ -16,7 +17,7 @@
     },
     "flex-layout.col#left": {
       "children": [
-        "product-images"
+        "stack-layout#brand"
       ]
     },
     "flex-layout.col#right": {
@@ -37,5 +38,23 @@
       "sku-selector",
       "product-quantity"
     ]
+  },
+  "stack-layout#brand": {
+    "children": [
+      "product-images",
+      "product-brand"
+    ]
+  },
+  "product-brand": {
+    "props": {
+      "displayMode": "logo",
+      "height": 30
+    }
+  },
+  "sku-selector": {
+    "props": {
+      "visibility": "more-than-one",
+      "showVariationsErrorMessage": true
+    }
   }
 }
