finalizando a parte de pagina por produto

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -54,7 +54,8 @@
   "sku-selector": {
     "props": {
       "visibility": "more-than-one",
-      "showVariationsErrorMessage": true
+      "showVariationsErrorMessage": true,
+      "fallbackToText": true
     }
   }
 }
