ajustando as props do sku-selector

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -53,7 +53,7 @@
   },
   "sku-selector": {
     "props": {
-      "visibility": "more-than-one",
+      "initialSelection": "empty",
       "showVariationsErrorMessage": true,
       "showValueForVariation": "image"
     }
