--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -30,18 +30,28 @@
   "flex-layout.row#results": {
     "children": [
       "flex-layout.col#filter",
-      "flex-layout.col#search"
+      "flex-layout.col#search",
+      "flex-layout.col#left",
+      "flex-layout.col#right"
     ]
-  },
-  "filter-navigator.v3" :{
-    "props":{
-      "width": "20%"
-    }
   },
     "search-content": {
       "blocks": ["gallery", "not-found"]
     },
     "gallery": {
       "blocks": ["product-summary.shelf"]
+    },
+    "flex-layout.col#left":{
+      "blocks":[
+        "filter-navigator.v3"
+      ],
+      "props":{
+        "width": "20%"
+      }
+    },
+    "flex-layout.col#right":{
+      "blocks":[
+        "search-content"
+      ]
     }
 }
