ajustes finais tab-layout

--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -13,6 +13,13 @@
       ]
     },
 
+    "tab-content#home":{
+      "children":[
+        "tab-content.item#home1",
+        "tab-content.item#home2"
+      ]
+    },
+
     "tab-list#home":{
       "children": [
         "tab-list.item#home1",
