--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -38,7 +38,7 @@
     "tab-list.item#home2" :{
       "props": {
         "tabId": "electronics",
-        "label": "Electronics"
+        "label": "Instagram"
       }
     },
     "flex-layout.row#about-us": {
@@ -92,7 +92,7 @@
       },
       "tab-content.item#home2":{
         "children": [
-          "rich-text#home2"
+          "iframe"
         ],
         "props":{
           "tabId": "electronics"
@@ -105,11 +105,11 @@
           "textAlignment": "LEFT"
         }
       },
-      "rich-text#home2": {
+      "iframe": {
         "props": {
-          "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-          "textPosition": "CENTER",
-          "font": "t-heading-3"
+          "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
+          "width": "800px",
+          "height": "1000px"
         }
       }
 }
