trabalhando com iframe

--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -105,11 +105,12 @@
           "textAlignment": "LEFT"
         }
       },
+      
       "iframe": {
         "props": {
           "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
-          "width": "800",
-          "height": "1000"
+          "width": 800,
+          "height": 1000
         }
       }
 }
