--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -15,9 +15,12 @@
     "search-result-layout.customQuery":{
         "props":{
             "maxItemsPerPage": 8,
-            "queryField": "Blue Top Retro Camera",
             "hideUnavailableItems": true,
-            "OrderByReleaseDateDESC": true
+            "orderByField": "OrderByReleaseDateDESC",
+            "querySchema": {
+                "skusFilter": "Blue Top Retro Camera",
+                "simulationBehavior": "skip"
+              }
         }
     }
 }
