--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -14,10 +14,14 @@
     },
     "search-result-layout.customQuery":{
         "props":{
+            "querySchema": {
+            "skusFilter": "FIRST_AVAILABLE",
+            "simulationBehavior": "skip",
             "maxItemsPerPage": 8,
             "queryField": "Blue Top Retro Camera",
             "hideUnavailableItems": true,
             "orderByField": "OrderByReleaseDateDESC"
+            }
         }
     }
 }
