--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -26,6 +26,7 @@
         "header-row#search"
       ]
     },
+
     "header-row#notification": {
         "children": [
           "header-spacer",
@@ -33,19 +34,20 @@
           "header-spacer"
         ]
       },
-      "header-row#main":{
-          "children":[
-              "logo",
-              "header-spacer",
-              "search-bar",
-              "minicart",
-              "login"
-          ],
-          "props":{
-              "inverted": true,
-              "sticky": true,
-              "fullWidth": false
-          }
+      "header-row#main": {
+        "children": [
+          "logo",
+          "header-spacer",
+          "search-bar",
+          "minicart",
+          "login"
+        ],
+        "props": {
+            "inverted": true,
+            "sticky": true,
+            "fullWidth": false
+
+        }
       },
       "header-row#main-mobile": {
         "children": [
@@ -63,8 +65,7 @@
       
       "header-row#search": {
         "children": [
-          "search-bar",
-          "image-row#search"
+          "search-bar"
         ],
         "props": {
           "sticky": true
