--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -10,6 +10,21 @@
         "orientation": "horizontal"
       }
     },
+    "menu-item#major-appliances":{
+        "children":[
+            " vtex.menu@2.x:submenu#major"
+        ]
+    },
+    "menu-item#small-appliances":{
+        "children":[
+            " vtex.menu@2.x:submenu#small"
+        ]
+    },
+    "menu-item#electronics-appliances":{
+        "children":[
+            " vtex.menu@2.x:submenu#electronics"
+        ]
+    },
     "vtex.menu@2.x:submenu#major":{
         "children":[
           "vtex.menu@2.x:menu#major"
