--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -3,27 +3,15 @@
       "children": [
         "menu-item#major-appliances",
         "menu-item#small-appliances",
-        "menu-item#electronics"
+        "menu-item#electronics",
+        "vtex.menu@2.x:submenu#major",
+        "vtex.menu@2.x:submenu#small",
+        "vtex.menu@2.x:submenu#electronics"
       ],
     
       "props":{
         "orientation": "horizontal"
       }
-    },
-    "menu-item#major-appliances":{
-        "children":[
-            "vtex.menu@2.x:submenu#major"
-        ]
-    },
-    "menu-item#small-appliances":{
-        "children":[
-            "vtex.menu@2.x:submenu#small"
-        ]
-    },
-    "menu-item#electronics":{
-        "children":[
-            "vtex.menu@2.x:submenu#electronics"
-        ]
     },
     "vtex.menu@2.x:submenu#major":{
         "children":[
