--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -10,6 +10,12 @@
         "orientation": "horizontal"
       }
     },
+
+    "menu-item#major-appliances":{
+        "blocks":[
+            "vtex.menu@2.x:submenu#major"
+        ]
+    },
     "vtex.menu@2.x:submenu#major":{
         "children":[
           "vtex.menu@2.x:menu#major"
