--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -3,7 +3,10 @@
       "children": [
         "menu-item#major-appliances",
         "menu-item#small-appliances",
-        "menu-item#electronics"
+        "menu-item#electronics",
+        "vtex.menu@2.x:submenu#major",
+        "vtex.menu@2.x:submenu#small",
+        "vtex.menu@2.x:submenu#electronics"
       ],
     
       "props":{
