refazendo a parte de menu

--- a/store/blocks/menu-items.jsonc
+++ b/store/blocks/menu-items.jsonc
@@ -9,6 +9,9 @@
     }
   },
   "menu-item#small-appliances": {
+    "children":[
+      "vtex.menu@2.x:submenu#major"
+    ],
       "props":
     {
       "type": "category",
