refazendo a parte de menu

--- a/store/blocks/menu-items.jsonc
+++ b/store/blocks/menu-items.jsonc
@@ -1,5 +1,8 @@
 {
   "menu-item#major-appliances": {
+    "children":[
+      "vtex.menu@2.x:submenu#major"
+    ],
       "props": {
       "type": "custom",
       "highlight": true,
@@ -10,7 +13,7 @@
   },
   "menu-item#small-appliances": {
     "children":[
-      "vtex.menu@2.x:submenu#major"
+      "vtex.menu@2.x:submenu#small"
     ],
       "props":
     {
@@ -23,6 +26,9 @@
     }
   },
   "menu-item#electronics": {
+    "children":[
+      "vtex.menu@2.x:submenu#electronics"
+    ],
       "props":
     {
       "type": "category",
